feat: todo-cistem-backend ha sido inicializado

--- a/.env-example
+++ b/.env-example
@@ -4,8 +4,8 @@
 #* 3. Renombre el archivo copiado a ".env" y la app hará el resto.
 #* 4. Se recomienda dejar las variables de entorno en el orden ya especifícado.
 
-#? Tipo de Entorno (dev|prod)
-NODE_ENV="dev"
+#? Tipo de Entorno (development|production)
+NODE_ENV="development"
 
 #? Versión de Producto
 VERSION="0.1.0-alpha"
